--- a/alpine-s3/Dockerfile
+++ b/alpine-s3/Dockerfile
@@ -2,8 +2,8 @@ FROM maven:3.5.2-jdk-8-alpine as s3-blobstore
 
 RUN apk --update add --no-cache --virtual .build-deps \
     unzip \
-    wget
-RUN wget --quiet https://github.com/sonatype/nexus-blobstore-s3/archive/ec6bdbf88df35a421424c72a6f118f6f364a9f6d.zip -O /tmp/nexus-blobstore-s3.zip && \
+    wget && \
+    wget --quiet https://github.com/sonatype/nexus-blobstore-s3/archive/ec6bdbf88df35a421424c72a6f118f6f364a9f6d.zip -O /tmp/nexus-blobstore-s3.zip && \
     unzip /tmp/nexus-blobstore-s3.zip -d /tmp && \
     mv /tmp/nexus-blobstore-s3-* /tmp/nexus-blobstore-s3 && \
     cd /tmp/nexus-blobstore-s3 && \
